# map-descriptors

./: .gitignore  Cargo.toml  README.md  diagrams.md  package-lock.json  package.json
crates/coordinator/descriptors/: Cargo.toml
crates/coordinator/descriptors/src/: lib.rs  mutators.rs  property_map_builder.rs  queries.rs  storage_functions.rs  stub_data_creator.rs  test_helpers.rs  type_header.rs  type_header_mutators.rs
crates/coordinator/descriptors/tests/: extern_descriptor_tests.rs
crates/integrity/descriptors_integrity/: Cargo.toml
crates/integrity/descriptors_integrity/src/: lib.rs
crates/types/builder/: Cargo.toml
crates/types/descriptor/: Cargo.toml
crates/types/descriptor/src/: descriptor.rs  holon_descriptor.rs  lib.rs  property_descriptor.rs  relationship_descriptor.rs  type_header.rs  value_types.rs
tests/: package.json
tests/src/descriptors/: holon.descriptor.test.ts
ui/: index.html
ui/src/: holochain-app.ts
workdir/: dna.yaml  happ.yaml  map-descriptors.happ  map-descriptors_integrity.happ  map_descriptors.dna  web-happ.yaml
