[package]
name = "descriptors_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "descriptors_integrity"

[dependencies]
hdi = { workspace = true }
holochain_integrity_types = { workspace = true }
serde = { workspace = true }

types_descriptor = { workspace = true }