[package]
name = "types_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "types_builder"

hdk = { workspace = true }
hdi = { workspace = true }
holochain_integrity_types = { workspace = true }

serde = { workspace = true }
derive-new = { workspace = true }
thiserror = "1"

descriptors_integrity = { workspace = true }
types_descriptor = { workspace = true }

[dependencies]
